great-idea/css/index.css
*{
	box-sizing: border-box;
	margin: 0;
	padding:0;
}
.container{
	max-width: 80%;
	margin: 0 auto;
	padding: 30px 0;
}

nav{
	display:flex;
	justify-content: space-between;
	align-items: center;
	height: 25px;
	max-width: 100%;
}
nav a {
	text-decoration: none;
	color: grey;
}
nav a:hover{
	color: blue;
}
/* IF THINGS BREAK IT IS BETWEEN HERE AND SERVICES */
.header{
	display:flex;
	justify-content: space-evenly;
	align-items: center;
	max-width: 100%;
	margin: 75px 0;
}
.headerText{
	text-align: center;
	max-width: 48%;
	
}

.button{
	width: 150px;
	height:35px;
	border:2px solid black;
	margin:0 auto;
	padding-top: 5px;
}
.button:hover{
	color:white;
	background-color:black;
	border:2px solid grey;
}

.headerText h1 {
	font-size:70px;
}

.topContent {
	display: flex;
	justify-content: space-between;
	margin: 45px 0;
	border-top: 2px solid black;
	padding-top: 45px;
}
.topContent h2{
	padding-bottom: 15px;
}
.bottomContent{
	display: flex;
	justify-content: space-between;
	margin: 45px 0;
	border-bottom: 2px solid black;
	padding-bottom: 45px;
}
.bottomContent .box{
	margin:0 10px;
}
.bottomContent h2{
	padding-bottom: 15px;
}
.contact h2{
	margin: 25px 0;
}
.contact .number{
	margin: 20px 0;
}
/* SERVICES PAGE */
.serviceHeaderImg {
	display: flex;
	justify-content: center;
	margin:35px 0;
}
.service{
	height:150px;
	border-bottom: 2px solid black;
}
.service h1{
	margin: 25px 0;
}
/* MAIN CONTENT STARTS HEAR */
.serviceBox{
	width: 48%;
	border: 2px solid black;
	padding:15px;
	background-color: lightgray;
}
.serviceBox p{
	margin: 10px 0;
}
.serviceBox h2{
	margin-bottom: 25px;
}
.learnMoreButton{ /*NEEDS WORK */
	margin: 7px;
	height: 30px;
	width: 40%;
	background-color: white;
	text-align: center;
	display:flex;
	justify-content: center;
	align-items: center;
	border-color: 2px solid black;
}
.learnMoreButton:hover{
	color:white;
	background-color:darkgrey;
	border-color: 2px solid white;
}
.learnMoreButton a{
	text-decoration: none;
	color:black;
}
.learnMoreButton a:hover{
	color:white;
}
.mainContentTop{
	display:flex;
	justify-content: space-between;
	margin:40px 0;
}
.mainContentMid{
	display:flex;
	justify-content: space-between;
	margin:40px 0;
}
.mainContentBot{
	display:flex;
	justify-content: space-between;
	margin:40px 0;
} 
/* CLOSING CONTENTS */
.closingThought {
	display: flex;
	justify-content: space-between;
	align-content: center;
	height: 500px;
}
.service-info-img{
	width:40%
}
.someFactsBox{
	width:46%;
	margin: 15px;
}
.someFactsBox h3{
	margin-bottom: 25px;
	font-size: 25px;
}
.someFactsBox p{
	margin:10px o;
}
.someFactsList {
	margin-left: 20px;
	margin-top: 20px;
	line-height: 1.9;
}

.serviceFooter {
	margin-top: 50px;
	display: flex;
	justify-content: center;
}

